# VaultCLI

./: .gitignore  CMakeLists.txt  README.md  build.sh
client/: CMakeLists.txt  main.cpp
client/network/: api_client.cpp  api_client.h
client/tui/: app.cpp  app.h
common/: CMakeLists.txt
common/crypto/: crypto.cpp  crypto.h
common/models/: file_meta.h  user.h
common/utils/: utils.cpp  utils.h
server/: CMakeLists.txt  main.cpp
server/auth/: auth_manager.cpp  auth_manager.h
server/routes/: routes.cpp  routes.h
server/storage/: storage_manager.cpp  storage_manager.h
